--- a/.gitignore
+++ b/.gitignore
@@ -45,8 +45,8 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
-Letters/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
-Letters/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+Letters-Vis_Studio/Letters/obj/
+Letters-Vis_Studio/Letters/bin/
 *.cache
-Letters/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
 .vs/config/applicationhost.config
+Letters-VSCode/out/
